# extended_matrix

./: .gitignore  Cargo.toml  README.md  commands.txt
src/: extended_matrix.rs  functions.rs  lib.rs  main.rs  matrix.rs  matrix_element_position.rs  new_extended_matrix.rs  one.rs  shape.rs  traits.rs
src/basic_matrix/: basic_matrix.rs  functions.rs  mod.rs  non_symmetric_matrix.rs  symmetric_matrix.rs
src/enums/: operation.rs
src/matrix/: csr_matrix.rs  enums.rs  matrix.rs  mod.rs  square_matrix.rs  structs.rs  symmetric_matrix.rs  traits.rs  vec_3.rs  vector.rs  vector_3.rs
src/matrix/enums/: operation.rs
src/matrix/structs/: mod.rs  position.rs  shape.rs
src/matrix/traits/: basic_operations_trait.rs  into_matrix_trait.rs  mod.rs  square_matrix_trait.rs  try_into_square_matrix_trait.rs  try_into_symmetric_compacted_matrix_trait.rs  try_into_symmetric_matrix_trait.rs  vector_trait.rs
src/tests/: matrix.rs  mod.rs  tests.rs
src/tests/matrix/: basic_operations.rs  mod.rs  structs.rs  test_csr_matrix.rs  test_matrix.rs  test_square_matrix.rs  test_symmetric_matrix.rs  test_vec_3.rs  test_vector.rs  test_vector_3.rs  traits.rs
src/tests/matrix/structs/: mod.rs  test_position.rs  test_shape.rs
src/tests/matrix/traits/: mod.rs  test_basic_operations_trait.rs  test_square_matrix_trait.rs  test_square_matrix_trait.rs:Zone.Identifier  test_try_into_square_matrix_trait.rs  test_try_into_symmetric_compacted_matrix_trait.rs  test_vector_trait.rs  (+1 more)
src/tests/matrix_operations/: matrix_operations_tests.rs  mod.rs
src/traits/: float_trait.rs  mod.rs  uint_trait.rs
