[package]
name = "extended_matrix"
version = "0.3.17"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "A matrix calculation module."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colsol = "1.0.0"
extended_matrix_float = "1.0.0"
