[package]
name = "extended_matrix"
version = "0.9.0"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "A matrix calculation module."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RomanShushakov/extended_matrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended_matrix_float = "1.0.0"
