[package]
name = "extended_matrix"
version = "0.9.3"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2024"
description = "A matrix calculation module."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RomanShushakov/extended_matrix"

[dependencies]
extended_matrix_float = "1.0.0"
